--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,8 +8,9 @@
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.5",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arfoundation": "4.0.12",
-    "com.unity.xr.oculus": "1.7.0",
+    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.management": "3.2.17",
+    "com.unity.xr.oculus": "1.9.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
